# mabe

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci-cd.yaml  ci.yaml
.trunk/: actions  notifications  out  tools  trunk.yaml
.trunk/configs/: .markdownlint.yaml  .rustfmt.toml  cspell.yaml
mabe/: Cargo.toml
mabe/src/: lib.rs
mabe/tests/: tuple_variants.rs  unit_variants.rs
mabe_utils/: Cargo.toml
mabe_utils/src/: lib.rs
mabe_utils/src/api/: braces.rs  mod.rs
src/: lib.rs
src/api/: mod.rs
src/api/derive_macro/: mod.rs
src/api/derive_macro/helpers/: finders.rs  mod.rs
src/error/: api.rs  mod.rs
src/error/api/: derive_macro.rs  mod.rs
src/error/utils/: mod.rs
src/tools/: helpers.rs  mod.rs
src/utils/: debug.rs  mod.rs
src/utils/debug/: mod.rs
src/utils/helpers/: finders.rs  mod.rs
tests/: simple_cases.rs  struct_variants.rs  tuple_variants.rs  unit_variants.rs
