[package]
name = "mabe"
version = "1.1.0"
edition = "2021"
authors = ["Amon Rayfa <amon.rayfa@proton.me>"]
description = "A simple framework for creating debug-friendly error enums in Rust."
keywords = ["debugging", "enum", "errors", "framework", "simple"]
categories = ["development-tools::debugging"]
homepage = "https://github.com/AmonRayfa/mabe"
repository = "https://github.com/AmonRayfa/mabe"
license = "Apache-2.0"
readme = "README.md"
exclude = [
  ".github/**",
  ".trunk/**",
  "node_modules/**",
  "target/**",
  ".gitignore",
  "generated_implementations.log",
  "package.json",
  "pnpm-lock.yaml",
]
publish = true

[profile]
dev = { opt-level = 0 }
release = { opt-level = 3 }

[lib]
proc-macro = true

[[test]]
name = "unit_variants"

[[test]]
name = "tuple_variants"

[[test]]
name = "struct_variants"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

[features]
default = []
colorize = []
