[package]
name = "mabe"
version = "0.1.2"
authors = ["Amon Rayfa <amon.rayfa@proton.me>"]
homepage = "https://github.com/AmonRayfa/mabe"
license = "Apache-2.0"
description = "A Rust library for creating simple and coherently structured runtime errors."
keywords = ["debugging", "error", "coherent", "simple", "structured"]
categories = ["development-tools::debugging"]
repository = "https://github.com/AmonRayfa/mabe"
readme = "README.md"
edition = "2021"
exclude = ["target/**"]
publish = true

[profile]
dev = { opt-level = 0 }
release = { opt-level = 3 }

[lib]
proc-macro = true

[[test]]
name = "unit_variants"

[[test]]
name = "tuple_variants"

[[test]]
name = "struct_variants"

[dependencies]
colored = "2"
mabe_utils = { path = "../mabe_utils" }
quote = "1"
syn = "1"
